<resources>

    <string name="app_name">Dudusgram</string>

    <!-- Fragments -->
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="view_comments_fragment">View Comments</string>
    <string name="view_profile_fragment">View Profile Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="view_chat_fragment">View Chat Fragment</string>
    <string name="view_new_chat_fragment">View New Chat Fragment</string>

    <!-- Firebase msgs -->
    <string name="auth_failed">Authentication failed.</string>
    <string name="auth_success">Authentication successful</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_token">token</string>
    <string name="field_notifications">notifications</string>
    <string name="field_profile_type">profile_type</string>
    <string name="field_room_id">room_id</string>
    <string name="dbname_messages">messages</string>
    <string name="dbname_members">members</string>
    <string name="dbname_chat">chat</string>
    <string name="field_chats">chats</string>
    <string name="field_last_message">last_message</string>
    <string name="field_timestamp">timestamp</string>

    <!-- Msgs -->
    <string name="no_account">No account yet? Create one now!</string>
    <string name="please_wait">Please wait…</string>
    <string name="register_new_account">REGISTER A NEW ACCOUNT</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signing_out">Signing Out…</string>
    <string name="no_likes">No likes yet, be the first person to like!</string>
    <string name="liked_by">Liked by </string>
    <string name="others">others</string>
    <string name="and">and</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="invalid_email">That is not a valid email address</string>
    <string name="short_username">Username too short! Please enter at least 5 characters.</string>
    <string name="short_displayName">Display name is too short! Please enter at least 5 characters.</string>
    <string name="username_exists">That username already exists!</string>
    <string name="email_already_in_use">That email is already in use</string>
    <string name="email_updated">Email has been updated!</string>
    <string name="username_saved">Saved username.</string>
    <string name="fill_out_all_fields">All fields must be filled out!</string>
    <string name="successful_sign_up">Sign up successful. Sending verification email.</string>
    <string name="private_profile">This profile is private. Follow this account to see their photos.</string>

    <!-- Activity -->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>
    <string name="chats_activity">Chats Activity</string>

    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="intent_user">intent_user</string>
    <string name="photo_id_from_notification">Photo_id</string>
    <string name="profile_id_from_notification">Profile_id</string>

    <!-- Bundle args names -->
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>

    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- time strings -->
    <string name="timezone">Europe/Zagreb</string>
    <string name="date_pattern">yyyy-MM-dd\'T\'HH:mm:ss\'z\'</string>

    <!-- Strings -->
    <string name="gallery">gallery</string>
    <string name="photo">Photo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="register">REGISTER</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
    <string name="open_camera">Open Camera</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="days_ago">days ago</string>
    <string name="today">Today</string>
    <string name="ViewAll">View all</string>
    <string name="comments">comments</string>
    <string name="account_settings">Account Settings</string>
    <string name="private_information">PRIVATE INFORMATION</string>
    <string name="website">Website</string>
    <string name="phone_number">Phone number</string>
    <string name="display_name">Display name</string>
    <string name="change_photo">Change photo</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="search">Search…</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="options">Options</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="days">d</string>
    <string name="deleted_photo_success">Successfully deleted the photo</string>
    <string name="error_text">Something went wrong</string>
    <string name="photo_upload_success">Photo upload success</string>
    <string name="authentication_fail">Authentication failed.</string>
    <string name="verification_email_send_fail">Could not send verification email.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="push_notifications">Push notifications</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="channel_name">Default</string>
    <string name="channel_description">Default_channel</string>
    <string name="notification_channel">Notification_channel</string>
    <string name="channel_description_follower">New follower</string>
    <string name="public_profile_button">Public</string>
    <string name="private_profile_button">Private</string>
    <string name="profile_type">Profile type:</string>
    <string name="conversation">Conversation</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="empty_message">Can not send empty message!</string>
    <string name="user_id_for_chat">User_id</string>
    <string name="field_first_user">firstUser</string>

</resources>
