<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:segmentedgroup="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/profile_photo"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:id="@+id/changeProfilePhoto"
                android:layout_below="@+id/profile_photo"
                android:layout_centerHorizontal="true"
                android:textColor="@color/link_blue"
                android:textSize="16sp"/>

            <!-- username section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="80dp"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout1">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_username"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/profile_photo" />

                <com.e.dudusgram.Utils.CustomText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:hint="@string/username"/>

            </RelativeLayout>

            <!-- display name section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout1"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout2"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_display_name"
                    android:layout_centerVertical="true"/>

                <com.e.dudusgram.Utils.CustomText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_name"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:hint="@string/display_name"/>

            </RelativeLayout>

            <!-- website section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout3"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_website"
                    android:layout_centerVertical="true"/>

                <com.e.dudusgram.Utils.CustomText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/website"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textUri"
                    android:hint="@string/website"
                    android:linksClickable="true"/>

            </RelativeLayout>

            <!-- description section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout3"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout4"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_description"
                    android:layout_centerVertical="true"/>

                <com.e.dudusgram.Utils.CustomText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:hint="@string/description"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/private_information"
                android:layout_below="@id/relLayout4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/textPrivateInfo"/>


            <!-- email section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textPrivateInfo"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout5"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_email"
                    android:layout_centerVertical="true"/>

                <com.e.dudusgram.Utils.CustomText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>

            </RelativeLayout>

            <!-- phone number section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout5"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout6"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_phone"
                    android:layout_centerVertical="true"/>

                <com.e.dudusgram.Utils.CustomText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneNumber"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="phone"
                    android:hint="@string/phone_number"/>

            </RelativeLayout>

            <!-- Notifications section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/relLayout7"
                android:layout_below="@+id/relLayout6"
                android:layout_marginTop="15dp"
                android:background="@drawable/white_gray_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_notifications"/>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/notificationsSwitch"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:text="@string/push_notifications"
                    android:checked="true"
                    android:textOn="@string/on"
                    android:textOff="@string/off"
                    android:minWidth="0dp"
                    android:minHeight="0dp"/>

            </RelativeLayout>

            <!-- Profile type section -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout7"
                android:layout_marginTop="15dp"
                android:id="@+id/relLayout8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/profile_type"
                    android:id="@+id/profileTypeText"
                    android:layout_centerVertical="true"
                    android:gravity="center"/>

                <info.hoang8f.android.segmented.SegmentedGroup
                    android:id="@+id/segmentedGroupProfileType"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    segmentedgroup:sc_border_width="2dp"
                    segmentedgroup:sc_corner_radius="10dp"
                    android:layout_toRightOf="@+id/profileTypeText"
                    android:layout_toEndOf="@+id/profileTypeText"
                    android:gravity="end"
                    android:layout_centerVertical="true"
                    app:sc_tint_color="@color/colorAccent">

                    <RadioButton
                        android:id="@+id/buttonPublic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/public_profile_button"
                        android:checked="true"
                        style="@style/RadioButton" />

                    <RadioButton
                        android:id="@+id/buttonPrivate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/private_profile_button"
                        android:checked="false"
                        style="@style/RadioButton" />

                </info.hoang8f.android.segmented.SegmentedGroup>

            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>
</merge>